--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset='utf-8'>
 <html lang="en-US">
   <head>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.css">
     <style>
         .icon {
           height: 50px;
