--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@ title: Casten for Congress
 				<h3>Neighborhood Profiles</h3>
 			</div>
 		</a>
+		<a href="https://canvassing-notification-system--emmajerzyk.repl.co/">
+			<div class="col-md-11">
+				<img src="../img/CanvassNote.png" class="thumbnail">
+				<h3>Canvassing Notification System</h3>
+			</div>
+		</a>
 </div>
 <div class="col-md-3">
 		<a href="precincts.html">
@@ -52,6 +58,14 @@ title: Casten for Congress
 			<div class="col-md-11">
 				<img src="../img/perf_dash.png" class="thumbnail">
 				<h3>Performance Dashboard</h3>
+			</div>
+		</a>
+</div>
+<div class="col-md-3">
+		<a href="https://filter-scrape-donors--emmajerzyk.repl.co/">
+			<div class="col-md-11">
+				<img src="../img/DonorScrape.png" class="thumbnail">
+				<h3>Donor Target List Generator</h3>
 			</div>
 		</a>
 </div>
