--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@ title: Casten for Congress
 				<h3>Precinct Map</h3>
 			</div>
 		</a>
+		<a href="https://sign-distribution--emmajerzyk.repl.co/">
+			<div class="col-md-11">
+				<img src="../img/SignDistribution.png" class="thumbnail">
+				<h3>Sign Distribution Algorithm</h3>
+			</div>
+		</a>
 </div>
 <div class="col-md-3">
 		<a href="performance_dashboard/index.html">
