facebook optimization update

--- a/facebook.html
+++ b/facebook.html
@@ -86,6 +86,8 @@ title: Facebook Data
 			<select class="form-control" name="objective" id="objective_dropdown" onChange="change_chart()">
 				<option value='EventResponses'>Event Responses</option>
 				<option value='LeadGeneration'>Lead Generation</option>
+				<option value='Frequency'>Frequency</option>
+				<option value='Reach'>Reach</option>
 			</select>
 		</div>
 		<div class="barchart"></div>
