--- a/facebook.html
+++ b/facebook.html
@@ -104,6 +104,12 @@ title: Facebook Data
 		<script type="text/javascript">
 			var line_colors = ["#E32636", "#5D8AA8" , "#8DB600	", "#FF9966", "#FFBF00" , "#4B5320", "#007FFF" , "#DE5D83" , "#FFD12A" , "#98777B" , "#B5A642" , "#FF007F" , "#08E8DE" , "#D19FE8" , "#004225" , "#CC0000" , "#702963" , "	#ED872D" , "#536878" , "#E30022" , "#006B3C" , "#00CC99" , "#FFEF00" , "#A3C1AD" , "#ED9121" , "#2A52BE" , "#ACE1AF" , "#36454F" , "#DFFF00" , "#DE3163", "#FFA700" , "#98817B" , "#00FF6F" , "#CD5C5C", "#7B3F00" , "#E34234" , "#D2691E" , "#FBCCE7", "#E4D00A" , "#0047AB" , "#FF3800" , "#8C92AC", "#FBEC5D" , "#FF7F50" , "#893F45" , "#654321" , "#A40000" , "#08457E" , "#008B8B"];
 			visible_data = data[document.getElementById('breakdown_dropdown').value][document.getElementById('objective_dropdown').value][document.getElementById('type_dropdown').value][document.getElementById('election_dropdown').value];
+			console.log(data);
+			console.log(data[document.getElementById('breakdown_dropdown').value]);
+			console.log(data[document.getElementById('breakdown_dropdown').value][document.getElementById('objective_dropdown').value]);
+			console.log(data[document.getElementById('breakdown_dropdown').value][document.getElementById('objective_dropdown').value][document.getElementById('type_dropdown').value]);
+			console.log(data[document.getElementById('breakdown_dropdown').value][document.getElementById('objective_dropdown').value][document.getElementById('type_dropdown').value][document.getElementById('election_dropdown').value]);
+			console.log(visible_data);
 			var barchart_width = 1000;
 			var barchart_height = 1000;
 			var left_start = 200;
@@ -143,7 +149,7 @@ title: Facebook Data
 					console.log('REMOVING CHART');
 					chart.remove();
 				}
-				visible_data = data[document.getElementById('breakdown_dropdown').value][document.getElementById('objective_dropdown').value][document.getElementById('election_dropdown').value];
+				visible_data = data[document.getElementById('breakdown_dropdown').value][document.getElementById('objective_dropdown').value][document.getElementById('type_dropdown').value][document.getElementById('election_dropdown').value];
 				line_height = top_start + ((bar_height + inter_bar_margin) * Object.keys(visible_data).length) + (line_margin * 2);
 				svg_one = d3.select("div.barchart")
 							.append("svg")
