day of the week for facebook optimization

--- a/facebook.html
+++ b/facebook.html
@@ -79,6 +79,7 @@ title: Facebook Data
 				<option value='TOD'>Time of Day</option>
 				<option value='Age'>Age</option>
 				<option value='Gender'>Gender</option>
+				<option value='Day'>Day of the Week</option>
 			</select>
 		</div>
 		<div id="objectives">
