--- a/precincts.html
+++ b/precincts.html
@@ -152,7 +152,7 @@ title: Precinct Data
 			var legend;
 			var primary_divs = ['2016PrimaryPresidential', '2012PrimaryCongressional', '2014PrimaryCongressional','2016PrimaryCongressional','2018PrimaryCongressional','2012PrimaryPresidential'];
 			var primary_candidates_dict = {'2016PrimaryPresidential': primary_candidates_2016_P, '2016PrimaryCongressional': primary_candidates_2016, '2014PrimaryCongressional': primary_candidates_2014, '2012PrimaryCongressional': primary_candidates_2012, '2018PrimaryCongressional': primary_candidates_2018};
-			var office_colors = {'Downers Grove': '#0061ff' , 'Barrington': '#16a31d' , 'Elgin': '#d1881b' ,'West Chicago': '#c40528', '': '#000000'};
+			var office_colors = {'Downers Grove': '#0061ff' , 'DG': '#0061ff' ,'Barrington': '#16a31d' , 'Elgin': '#d1881b' ,'WC': '#c40528', 'West Chicago': '#c40528', '': '#000000', 'Wheaton': '#aa42f4'};
 
 			function create_map(type) {
 				if (typeof map != 'undefined') {
